test/files/valid/include1.fbs
include "include2.fbs";
include "subdir/include3.fbs";
