test/files/invalid/defined_twice_namespace_inner.fbs
include "helpers/overlapping_namespace_inner1.fbs";
include "helpers/overlapping_namespace_inner2.fbs";

namespace Foo;

table Bar {}
